<resources>
    <string name="app_name">CoESMApp</string>
    <string name="continue_label">Continue</string>
    <string name="i_decline_label">I Decline</string>
    <string name="i_accept_label">I Accept</string>
    <string name="surname_hint">Surname</string>
    <string name="gender_label">Gender</string>
    <string name="gender_male_label">Male</string>
    <string name="gender_female_label">Female</string>
    <string name="id_or_passport_number_hint">ID or Passport Number</string>
    <string name="email_address_hint">Email Address</string>
    <string name="cellphone_number_hint">Cellphone Number</string>
    <string name="preferred_method_hint">Preferred Method</string>
    <string name="preferred_method_email_phone_hint">Preferred Method (Email/ Phone)</string>
    <string name="required_label">Required</string>
    <string name="asterisk">*</string>
    <string name="communication_message">Would you like to set this number and email address to be your primary contact
        details for all City Of Ekurhuleni communication?
    </string>
    <string name="primary_phone_label">This is my primary phone number</string>
    <string name="different_primary_phone_label">I have a different primary number</string>
    <string name="email_address_label">Email Address</string>
    <string name="sample_email">trustmub@gmail.com</string>
    <string name="primary_email_label">This is my primary email address</string>
    <string name="not_primary_email_label">i have a different primary email address.</string>
    <string name="cellphone_number_label">Cellphone Number</string>
    <string name="province_hint">Province</string>
    <string name="postal_code_hint">Postal Code</string>
    <string name="street_number_hint">Street Number</string>
    <string name="street_name_hint">Street Name</string>
    <string name="suburb_hint">Suburb</string>
    <string name="select_your_property_type_message">Select your property type</string>
    <string name="complex_name">Complex</string>
    <string name="stand_alone_house_name">Stand alone house</string>
    <string name="commercial_property_name">Commercial property</string>
    <string name="building_name">Building Name/Number</string>
    <string name="company_name_hint">Company Name</string>
    <string name="ts_and_cs_title_label">Terms and Condition</string>
    <string name="registration_verification">Registration Verification</string>
    <string name="reading_objections_title">Reading Objections</string>
    <string name="stand_alone_title_label">Stand Alone Address</string>
    <string name="personal_details_title_label">Personal Details</string>
    <string name="contact_details_title_label">Contact Details</string>
    <string name="complex_address_title_label">Complex Address</string>
    <string name="commecial_address_title_label">Commercial Address</string>
    <string name="address_details_title_label">Address Details</string>
    <string name="proper_ownership_status">Are you the property Owner or Tenant?</string>
    <string name="reports_title">Reports</string>
    <string name="meter_reading_scheduke_title">Meter Reading Schedule</string>

    <string-array name="yes_or_no">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="property_ownership">
        <item>Owner</item>
        <item>Tenant</item>
    </string-array>
    <string-array name="contact_preference">
        <item>Email</item>
        <item>Phone</item>
    </string-array>
    <string-array name="readings_range">
        <item>Last 1 month</item>
        <item>Last 3 months</item>
        <item>Last 5 month</item>
    </string-array>
    <string name="title_activity_meter_reading_schedule">MeterReadingScheduleActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_close">Close</string>
    <string name="message_booking_confirmation_message">Your meter reading booking has been received and your
        confirmation code is: 1234556789
    </string>
    <string name="message_security_warning">For security reasons, please verify the confirmation code with the agent
        apon arrival.
    </string>
    <string name="label_meter_number">Meter Number</string>
    <string name="label_previous_meter_reading">Previous Meter Reading</string>
    <string name="label_current_meter_reading">Current Meter Reading</string>
    <string name="label_submit_reading">Submit Reading</string>
    <string name="description_image_capture_reading">Image Capture Reading</string>
    <string name="and">and</string>
    <string name="label_between_which_hours">Between which hours?</string>
    <string name="label_set_agent_date">One of our agents will be in your area during the following dates. Please select
        a date suitable for your meter reading.
    </string>
    <string name="hint_firstname_s">Firstname(s)</string>
    <string name="message_verification_sent_cellphone">An SMS with a verification code has been sent to you cellphone,
        please enter the code below:
    </string>
    <string name="label_enter_verification_code">Enter Verification Code:</string>
    <string name="label_verify">Verify</string>

    <string-array name="business_hours">
        <item>7am</item>
        <item>8am</item>
        <item>9am</item>
        <item>10am</item>
        <item>11am</item>
        <item>12am</item>
        <item>1pm</item>
        <item>2pm</item>
        <item>3pm</item>
        <item>4pm</item>
    </string-array>
</resources>
