<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">


    <TextView
            android:text="@string/communication_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contact_details_message" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp" android:layout_marginTop="28dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/cellphone_number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_cellnumber_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_contact_details_message"/>
    <TextView
            android:text="061 270 5081"
            android:backgroundTint="@color/colorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contacts_cell_number"
            app:layout_constraintBottom_toBottomOf="@+id/tv_cellnumber_label"
            app:layout_constraintTop_toTopOf="@+id/tv_cellnumber_label"
            app:layout_constraintStart_toEndOf="@+id/tv_cellnumber_label" android:layout_marginStart="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:id="@+id/tg_phone_primary"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_cellnumber_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
                android:text="@string/primary_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_primary_phone_number"
                android:layout_weight="1"/>
        <RadioButton
                android:text="@string/different_primary_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_new_primary_phone" android:layout_weight="1"/>


    </RadioGroup>


    <TextView
            android:text="@string/email_address_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_emai_address_label" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tg_phone_primary"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
    <TextView
            android:text="@string/sample_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_contact_email_address"
            app:layout_constraintTop_toTopOf="@+id/tv_emai_address_label"
            app:layout_constraintBottom_toBottomOf="@+id/tv_emai_address_label"
            app:layout_constraintStart_toEndOf="@+id/tv_emai_address_label" android:layout_marginStart="16dp"/>
    <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_emai_address_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <RadioButton
                android:text="@string/primary_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_primary_email_address"
                android:layout_weight="1"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rb_new_primary_email"
                android:layout_weight="1"
                android:text="@string/not_primary_email_label"/>
    </RadioGroup>


    <Button
            android:text="@string/continue_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_contact_continue"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/Button_Solid"/>
</android.support.constraint.ConstraintLayout>