<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_height="match_parent"
        android:layout_width="match_parent">

    <android.support.v4.widget.NestedScrollView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/sv_detail"
            android:layout_height="0dp"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btn_personal_continue" android:layout_marginBottom="8dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:id="@+id/til_owner_tenant"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    android:hint="@string/preferred_method_hint">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/proper_ownership_status"/>


                <Spinner
                        android:layout_width="match_parent"
                        android:background="@color/colorSpinner"
                        android:layout_height="40dp"
                        android:id="@+id/spinner_owner_tenant"
                />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_firstname" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/til_owner_tenant"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_firstname_s" android:id="@+id/ti_firstname"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_surname" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/til_firstname" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/surname_hint" android:id="@+id/ti_surname"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:text="@string/gender_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/til_surname"/>
            <CheckBox
                    android:text="@string/gender_male_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_gender_male"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/textView" android:layout_marginStart="24dp"/>
            <CheckBox
                    android:text="@string/gender_female_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/cb_gender_female"
                    app:layout_constraintTop_toTopOf="@+id/textView"
                    app:layout_constraintBottom_toBottomOf="@+id/textView"
                    app:layout_constraintStart_toEndOf="@+id/cb_gender_male" android:layout_marginStart="16dp"/>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_id_passport_number" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/id_or_passport_number_hint" android:id="@+id/ti_id_passport_number"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/til_id_passport_number"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:id="@+id/til_email_layout">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address_hint" android:id="@+id/ti_email"
                        android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/til_email_layout"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp"
                    android:id="@+id/til_phone">

                <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/cellphone_number_hint" android:id="@+id/ti_phone"
                        android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:id="@+id/til_preferred_method"
                    app:layout_constraintTop_toBottomOf="@+id/til_phone" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" android:hint="@string/preferred_method_hint">

                <TextView android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:text="@string/preferred_method_email_phone_hint"/>

                <Spinner
                        android:layout_width="match_parent"
                        android:background="@color/colorSpinner"
                        android:layout_height="40dp"
                        android:hint="@string/preferred_method_email_phone_hint"
                        android:id="@+id/spinner_preferred_method"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:text="@string/asterisk"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:id="@+id/asterisk"
                    android:textColor="@android:color/holo_red_dark" android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/til_preferred_method"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                    android:text="@string/required_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintTop_toTopOf="@+id/asterisk"
                    app:layout_constraintBottom_toBottomOf="@+id/asterisk"
                    app:layout_constraintStart_toEndOf="@+id/asterisk" android:layout_marginStart="8dp"/>
        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>

    <Button
            android:text="@string/continue_label"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/btn_personal_continue"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp"
            style="@style/Button_Solid"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:keyboardNavigationCluster="true"/>


</android.support.constraint.ConstraintLayout>
