<?xml version="1.0" encoding="utf-8"?>


<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:id="@+id/textInputLayout">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_name_hint" android:id="@+id/ti_stand_street_name"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:id="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/street_number_hint" android:id="@+id/ti_stand_house_number"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout3">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/suburb_hint" android:id="@+id/ti_stand_suburb"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:id="@+id/textInputLayout4">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/province_hint" android:id="@+id/ti_stand_province"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:id="@+id/textInputLayout12"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/postal_code_hint" android:id="@+id/ti_stand_postal_code"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/continue_label"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/btn_stand_continue" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout12" style="@style/Button_Solid"/>
</android.support.constraint.ConstraintLayout>